Change default language to Chinese

--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -50,19 +50,19 @@
     <div class="app-control module">
         <table>
         <caption>
-            <a href="#" class="section" title="FAVA CONTROL">FAVA CONTROL</a>
+            <a href="#" class="section" title="FAVA CONTROL">FAVA 控制</a>
         </caption>
 
         <tr class="model-control">
             <th scope="row">
-                <a href="fava/">Enter Fava</a>
+                <a href="fava/">进入 Fava</a>
             </th>
             <td></td>
             <td></td>
         </tr>
         <tr class="model-control">
             <th scope="row">
-                <a href="control/restart" id="restart-fava">Restart Fava</a>
+                <a href="control/restart" id="restart-fava">重启 Fava</a>
             </th>
             <td></td>
             <td></td>
